fix: text is not properly wrapped in the build - add stage module when repo name is lengthy (#2227)

--- a/src/modules/80-ci/components/PipelineStudio/BuildStage/EditStageView/EditStageView.module.scss
+++ b/src/modules/80-ci/components/PipelineStudio/BuildStage/EditStageView/EditStageView.module.scss
@@ -32,6 +32,13 @@
   width: 430px;
   padding: var(--spacing-small);
   background-color: var(--white);
+
+  .predefinedValue {
+    display: block !important;
+    text-overflow: ellipsis;
+    margin-top: calc(var(--spacing-small) / -1);
+    margin-bottom: var(--spacing-medium);
+  }
 }
 
 .configureCodebase {
@@ -42,11 +49,6 @@
 
 .repositoryUrl {
   overflow-x: auto;
-}
-
-.predefinedValue {
-  margin-top: calc(var(--spacing-small) / -1);
-  margin-bottom: var(--spacing-medium);
 }
 
 .cloneCodebaseInfo {
